# libarch

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  conanfile.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: CMakeLists.txt  expand.cc
examples/list/: CMakeLists.txt  colors.cc  colors.hh  dirent.cc  dirent.hh  main.cc
include/arch/: archive.hh  bzlib.hh  lzma.hh  unpacker.hh  zlib.hh
include/arch/base/: archive.hh  decompressor.hh  entry.hh  fs.hh
include/arch/base/io/: seekable.hh  stream.hh  writeable.hh
include/arch/io/: bzip2.hh  decoding_file.hh  file.hh  gzip.hh  lzma.hh
include/arch/tar/: archive.hh  entry.hh  stream.hh
include/arch/zip/: archive.hh  entry.hh  stream.hh
src/: archive.cc  bzlib.cc  check_signature.hh  decompress_impl.hh  lzma.cc  unpacker.cc  zlib.cc
src/base/: archive.cc  decompressor.cc  entry.cc
src/base/io/: seekable.cc  stream.cc  writeable.cc
src/io/: bzip2.cc  decoding_file.cc  file.cc  gzip.cc  lzma.cc
src/tar/: archive.cc  entry.cc  stream.cc
src/zip/: archive.cc  entry.cc  stream.cc
